--- a/arch/arm64/configs/kronic_defconfig
+++ b/arch/arm64/configs/kronic_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-IllusionKernel"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_NO_HZ=y
